--- a/css/index.css
+++ b/css/index.css
@@ -61,7 +61,8 @@ main>div {
     padding: 40px 26px;
     color: #fff;
     text-align: center;
-    background: linear-gradient(194deg, #af0262 0, #3b0576 100%);
+    background-color: #4c0c91;
+    /* background: linear-gradient(194deg, #640cb5 0, #3b0576 100%); */
     text-shadow: 0 2px 2px rgba(0, 0, 0, .6)
 }
 
